--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,3 @@
-// Theme colors definition
 $theme-colors: (
   "primary": #90caf9,
   "secondary": #b39ddb,
@@ -10,7 +9,6 @@ $theme-colors: (
   "dark": #424242,
 );
 
-// Import Bootstrap with our custom theme colors
 @import "bootstrap/scss/bootstrap";
 
 // Base theme variables
@@ -74,8 +72,13 @@ $theme-colors: (
   --navbar-btn-hover-text: #ffffff;
 }
 
-// Import auth container styles after theme variables are defined
 @import "./auth-container.scss";
+
+// Added Roboto as the default font with fallbacks in case Google Fonts is unavailable
+body {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
 // Add theme transition to relevant properties only
 body,
