--- a/src/styles/auth-container.scss
+++ b/src/styles/auth-container.scss
@@ -15,7 +15,7 @@
   border-radius: 30px;
   box-shadow: 0 5px 15px var(--auth-container-shadow);
   position: relative;
-  bottom: 7vmax;
+  bottom: 6vh;
   overflow: hidden;
   width: 768px;
   max-width: 100%;
