Added Questions to Template Creation

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -113,6 +113,7 @@ $theme-colors: (
 // Import component styles
 @import "./auth-container.scss";
 @import "./components.scss";
+@import "./questions.scss";
 
 /*
  2. BASE HTML ELEMENTS
